--- a/reSOUND/Views/PopOver.xib
+++ b/reSOUND/Views/PopOver.xib
@@ -13,6 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PopOver" customModule="reSOUND" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="ULq-zB-IGL" id="Hwo-pN-SKZ"/>
+                <outlet property="engineerButtonXib" destination="f7i-aF-2kN" id="Qtt-ti-S1I"/>
+                <outlet property="lyricistButtonXib" destination="qvn-8g-WhZ" id="6Lp-DS-Une"/>
+                <outlet property="producerButtonXib" destination="oFF-dq-BF2" id="q5I-2g-v1U"/>
+                <outlet property="singerButtonXib" destination="nb6-GI-QC5" id="sEw-HT-xUl"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -36,6 +40,9 @@
                             <state key="normal" title="singer">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="addSkillsToProfile:" destination="-1" eventType="touchUpInside" id="Mst-T8-42f"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFF-dq-BF2" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
                             <rect key="frame" x="84" y="0.0" width="76" height="36"/>
@@ -44,6 +51,9 @@
                             <state key="normal" title="producer">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="addSkillsToProfile:" destination="-1" eventType="touchUpInside" id="dSy-9H-1E3"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7i-aF-2kN" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
                             <rect key="frame" x="168" y="0.0" width="76" height="36"/>
@@ -52,6 +62,9 @@
                             <state key="normal" title="engineer">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="addSkillsToProfile:" destination="-1" eventType="touchUpInside" id="9Dr-H9-LG0"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvn-8g-WhZ" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
                             <rect key="frame" x="252" y="0.0" width="76" height="36"/>
@@ -60,6 +73,9 @@
                             <state key="normal" title="lyricist">
                                 <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="addSkillsToProfile:" destination="-1" eventType="touchUpInside" id="PBb-DU-PHj"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
