--- a/reSOUND/Views/Base.lproj/Main.storyboard
+++ b/reSOUND/Views/Base.lproj/Main.storyboard
@@ -438,21 +438,14 @@
                                     <constraint firstAttribute="height" constant="250" id="FKd-gB-W1b"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="update profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMt-QR-KPY">
-                                <rect key="frame" x="10" y="20" width="355" height="23.5"/>
-                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0h-TL-JR7">
                                 <rect key="frame" x="10" y="528" width="355" height="30"/>
                                 <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="vFt-to-RWS"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwC-c0-TOV" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
@@ -467,25 +460,41 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="britney" translatesAutoresizingMaskIntoConstraints="NO" id="3HX-75-4PD">
-                                <rect key="frame" x="93.5" y="60" width="187.5" height="187.5"/>
+                                <rect key="frame" x="93.5" y="50.5" width="187.5" height="187.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="3HX-75-4PD" secondAttribute="height" multiplier="1:1" id="VuO-vu-wzU"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Em-x2-1Cv" customClass="gradientButton" customModule="reSOUND" customModuleProvider="target">
+                                <rect key="frame" x="300" y="20" width="65" height="40"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                <state key="normal" title="save"/>
+                                <connections>
+                                    <action selector="saveButtonPressed:" destination="lOk-34-fsC" eventType="touchUpInside" id="6dM-cV-b2K"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="update profile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMt-QR-KPY">
+                                <rect key="frame" x="132" y="40" width="110.5" height="23.5"/>
+                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3HX-75-4PD" firstAttribute="width" secondItem="d5b-UO-nN2" secondAttribute="width" multiplier="0.5" id="3FW-Kn-UPj"/>
+                            <constraint firstItem="VMt-QR-KPY" firstAttribute="centerX" secondItem="PAd-yO-PDl" secondAttribute="centerX" id="3ul-PB-WGN"/>
+                            <constraint firstItem="VMt-QR-KPY" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" constant="20" id="7SO-G3-jqT"/>
                             <constraint firstItem="3HX-75-4PD" firstAttribute="centerX" secondItem="PAd-yO-PDl" secondAttribute="centerX" id="8HK-nx-1Ur"/>
-                            <constraint firstItem="VMt-QR-KPY" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="9kd-N7-e2G"/>
-                            <constraint firstItem="VMt-QR-KPY" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="top" id="Cd2-6t-dEx"/>
-                            <constraint firstItem="3HX-75-4PD" firstAttribute="top" secondItem="VMt-QR-KPY" secondAttribute="bottom" constant="16.5" id="DZi-0N-t2k"/>
-                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="VMt-QR-KPY" secondAttribute="trailing" constant="10" id="IZs-xg-Ghq"/>
+                            <constraint firstItem="2Em-x2-1Cv" firstAttribute="top" secondItem="d5b-UO-nN2" secondAttribute="top" constant="20" id="96j-iH-9Kx"/>
+                            <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="2Em-x2-1Cv" secondAttribute="trailing" constant="10" id="OL6-kj-HSI"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="Qj3-ez-nIH" secondAttribute="trailing" constant="10" id="P2b-oc-yiC"/>
                             <constraint firstAttribute="trailing" secondItem="3al-8f-Am8" secondAttribute="trailing" id="QtC-AB-z3W"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="KwC-c0-TOV" secondAttribute="trailing" constant="146" id="Uix-fe-KCO"/>
                             <constraint firstItem="KwC-c0-TOV" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="146" id="cQI-h0-NSJ"/>
                             <constraint firstItem="3al-8f-Am8" firstAttribute="top" secondItem="PAd-yO-PDl" secondAttribute="bottom" id="dSn-9e-XxG"/>
+                            <constraint firstItem="2Em-x2-1Cv" firstAttribute="width" secondItem="d5b-UO-nN2" secondAttribute="height" multiplier="65:667" id="gsa-lY-goN"/>
                             <constraint firstItem="y0h-TL-JR7" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="j4n-7M-49c"/>
                             <constraint firstItem="y0h-TL-JR7" firstAttribute="top" secondItem="Qj3-ez-nIH" secondAttribute="bottom" constant="8" id="jd4-Y3-fzO"/>
                             <constraint firstItem="KwC-c0-TOV" firstAttribute="top" secondItem="y0h-TL-JR7" secondAttribute="bottom" constant="8" id="lVH-nU-QEv"/>
@@ -493,6 +502,7 @@
                             <constraint firstItem="Qj3-ez-nIH" firstAttribute="leading" secondItem="PAd-yO-PDl" secondAttribute="leading" constant="10" id="w6H-Pp-vjT"/>
                             <constraint firstItem="3al-8f-Am8" firstAttribute="top" secondItem="KwC-c0-TOV" secondAttribute="bottom" constant="16" id="yzT-mB-pPb"/>
                             <constraint firstItem="PAd-yO-PDl" firstAttribute="trailing" secondItem="y0h-TL-JR7" secondAttribute="trailing" constant="10" id="zIL-EA-bqi"/>
+                            <constraint firstItem="Qj3-ez-nIH" firstAttribute="top" secondItem="3HX-75-4PD" secondAttribute="bottom" constant="40" id="zRg-Jx-Ndz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PAd-yO-PDl"/>
                     </view>
@@ -505,7 +515,7 @@
                         <outlet property="nameTextField" destination="miJ-5L-GG5" id="jAU-tD-30W"/>
                         <outlet property="popOverHeightConstraint" destination="FKd-gB-W1b" id="g6G-BF-G10"/>
                         <outlet property="popOverTopConstraint" destination="dSn-9e-XxG" id="D1f-ke-dO2"/>
-                        <outlet property="popOverView" destination="3al-8f-Am8" id="6Ip-A0-L4D"/>
+                        <outlet property="popOverView" destination="3al-8f-Am8" id="D9Q-V4-GJ7"/>
                         <outlet property="profileImageView" destination="3HX-75-4PD" id="tsH-UK-Uvf"/>
                         <outlet property="provinceTextField" destination="XxO-Yd-GiT" id="qZH-BQ-oEi"/>
                         <outlet property="skillsButton" destination="KwC-c0-TOV" id="WBO-n1-oVk"/>
